parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABREBLOCO
    ARROBA
    ASPAS_DUPLAS
    ASPAS_SIMPLES
    BARRA
    BARRA_INVERTIDA
    CASE
    CIRCUNFLEXO
    COMENTARIO
    CRASE
    DEFAULT
    DOIS_PONTOS
    DOLLAR
    ECOMERCIAL
    ELSE
    EQUALS
    ESTRELA
    EXCLAMACAO
    FECHABLOCO
    HASHTAG
    IF
    IN
    INTERROGACAO
    LCOLCHETE
    LET
    NOVA_LINHA
    OF
    PERCENT
    PIPE
    PONTO
    PONTO_VIRGULA
    RCOLCHETE
    SETAS
    SETAS_DUPLO
    SETAS_ESQUERDA
    TABULACAO
    THEN
    TIL
    VARSYM
    WHERE

Grammar

Rule 0     S' -> expressao
Rule 1     expressao -> expressao PLUS termo
Rule 2     expressao -> expressao MINUS termo
Rule 3     expressao -> termo
Rule 4     termo -> termo MULT fator
Rule 5     termo -> termo DIV fator
Rule 6     termo -> fator
Rule 7     fator -> INT
Rule 8     fator -> FLOAT
Rule 9     fator -> STRING
Rule 10    fator -> BOOL
Rule 11    fator -> CHAR
Rule 12    fator -> LPAREN expressao RPAREN
Rule 13    fator -> LCHAVE expressao RCHAVE
Rule 14    expressao -> expressao AND termo
Rule 15    expressao -> expressao OR termo
Rule 16    termo -> NOT fator
Rule 17    expressao -> expressao IGUAL termo
Rule 18    expressao -> expressao DIFERENTE termo
Rule 19    expressao -> expressao MENOR termo
Rule 20    expressao -> expressao MAIOR termo
Rule 21    expressao -> expressao MENOR_IGUAL termo
Rule 22    expressao -> expressao MAIOR_IGUAL termo
Rule 23    declaracao_valor -> ID IGUAL valor
Rule 24    declaracao_tipo -> ID DOIS_PONTOS_DUPLO TIPO
Rule 25    valor -> INT
Rule 26    valor -> FLOAT
Rule 27    valor -> STRING
Rule 28    valor -> BOOL
Rule 29    valor -> CHAR

Terminals, with rules where they appear

ABREBLOCO            : 
AND                  : 14
ARROBA               : 
ASPAS_DUPLAS         : 
ASPAS_SIMPLES        : 
BARRA                : 
BARRA_INVERTIDA      : 
BOOL                 : 10 28
CASE                 : 
CHAR                 : 11 29
CIRCUNFLEXO          : 
COMENTARIO           : 
CRASE                : 
DEFAULT              : 
DIFERENTE            : 18
DIV                  : 5
DOIS_PONTOS          : 
DOIS_PONTOS_DUPLO    : 24
DOLLAR               : 
ECOMERCIAL           : 
ELSE                 : 
EQUALS               : 
ESTRELA              : 
EXCLAMACAO           : 
FECHABLOCO           : 
FLOAT                : 8 26
HASHTAG              : 
ID                   : 23 24
IF                   : 
IGUAL                : 17 23
IN                   : 
INT                  : 7 25
INTERROGACAO         : 
LCHAVE               : 13
LCOLCHETE            : 
LET                  : 
LPAREN               : 12
MAIOR                : 20
MAIOR_IGUAL          : 22
MENOR                : 19
MENOR_IGUAL          : 21
MINUS                : 2
MULT                 : 4
NOT                  : 16
NOVA_LINHA           : 
OF                   : 
OR                   : 15
PERCENT              : 
PIPE                 : 
PLUS                 : 1
PONTO                : 
PONTO_VIRGULA        : 
RCHAVE               : 13
RCOLCHETE            : 
RPAREN               : 12
SETAS                : 
SETAS_DUPLO          : 
SETAS_ESQUERDA       : 
STRING               : 9 27
TABULACAO            : 
THEN                 : 
TIL                  : 
TIPO                 : 24
VARSYM               : 
WHERE                : 
error                : 

Nonterminals, with rules where they appear

declaracao_tipo      : 
declaracao_valor     : 
expressao            : 1 2 12 13 14 15 17 18 19 20 21 22 0
fator                : 4 5 6 16
termo                : 1 2 3 4 5 14 15 17 18 19 20 21 22
valor                : 23

Parsing method: LALR

state 0

    (0) S' -> . expressao
    (1) expressao -> . expressao PLUS termo
    (2) expressao -> . expressao MINUS termo
    (3) expressao -> . termo
    (14) expressao -> . expressao AND termo
    (15) expressao -> . expressao OR termo
    (17) expressao -> . expressao IGUAL termo
    (18) expressao -> . expressao DIFERENTE termo
    (19) expressao -> . expressao MENOR termo
    (20) expressao -> . expressao MAIOR termo
    (21) expressao -> . expressao MENOR_IGUAL termo
    (22) expressao -> . expressao MAIOR_IGUAL termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    expressao                      shift and go to state 1
    termo                          shift and go to state 2
    fator                          shift and go to state 3

state 1

    (0) S' -> expressao .
    (1) expressao -> expressao . PLUS termo
    (2) expressao -> expressao . MINUS termo
    (14) expressao -> expressao . AND termo
    (15) expressao -> expressao . OR termo
    (17) expressao -> expressao . IGUAL termo
    (18) expressao -> expressao . DIFERENTE termo
    (19) expressao -> expressao . MENOR termo
    (20) expressao -> expressao . MAIOR termo
    (21) expressao -> expressao . MENOR_IGUAL termo
    (22) expressao -> expressao . MAIOR_IGUAL termo

    PLUS            shift and go to state 12
    MINUS           shift and go to state 13
    AND             shift and go to state 14
    OR              shift and go to state 15
    IGUAL           shift and go to state 16
    DIFERENTE       shift and go to state 17
    MENOR           shift and go to state 18
    MAIOR           shift and go to state 19
    MENOR_IGUAL     shift and go to state 20
    MAIOR_IGUAL     shift and go to state 21


state 2

    (3) expressao -> termo .
    (4) termo -> termo . MULT fator
    (5) termo -> termo . DIV fator

    PLUS            reduce using rule 3 (expressao -> termo .)
    MINUS           reduce using rule 3 (expressao -> termo .)
    AND             reduce using rule 3 (expressao -> termo .)
    OR              reduce using rule 3 (expressao -> termo .)
    IGUAL           reduce using rule 3 (expressao -> termo .)
    DIFERENTE       reduce using rule 3 (expressao -> termo .)
    MENOR           reduce using rule 3 (expressao -> termo .)
    MAIOR           reduce using rule 3 (expressao -> termo .)
    MENOR_IGUAL     reduce using rule 3 (expressao -> termo .)
    MAIOR_IGUAL     reduce using rule 3 (expressao -> termo .)
    $end            reduce using rule 3 (expressao -> termo .)
    RPAREN          reduce using rule 3 (expressao -> termo .)
    RCHAVE          reduce using rule 3 (expressao -> termo .)
    MULT            shift and go to state 22
    DIV             shift and go to state 23


state 3

    (6) termo -> fator .

    MULT            reduce using rule 6 (termo -> fator .)
    DIV             reduce using rule 6 (termo -> fator .)
    PLUS            reduce using rule 6 (termo -> fator .)
    MINUS           reduce using rule 6 (termo -> fator .)
    AND             reduce using rule 6 (termo -> fator .)
    OR              reduce using rule 6 (termo -> fator .)
    IGUAL           reduce using rule 6 (termo -> fator .)
    DIFERENTE       reduce using rule 6 (termo -> fator .)
    MENOR           reduce using rule 6 (termo -> fator .)
    MAIOR           reduce using rule 6 (termo -> fator .)
    MENOR_IGUAL     reduce using rule 6 (termo -> fator .)
    MAIOR_IGUAL     reduce using rule 6 (termo -> fator .)
    $end            reduce using rule 6 (termo -> fator .)
    RPAREN          reduce using rule 6 (termo -> fator .)
    RCHAVE          reduce using rule 6 (termo -> fator .)


state 4

    (16) termo -> NOT . fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    fator                          shift and go to state 24

state 5

    (7) fator -> INT .

    MULT            reduce using rule 7 (fator -> INT .)
    DIV             reduce using rule 7 (fator -> INT .)
    PLUS            reduce using rule 7 (fator -> INT .)
    MINUS           reduce using rule 7 (fator -> INT .)
    AND             reduce using rule 7 (fator -> INT .)
    OR              reduce using rule 7 (fator -> INT .)
    IGUAL           reduce using rule 7 (fator -> INT .)
    DIFERENTE       reduce using rule 7 (fator -> INT .)
    MENOR           reduce using rule 7 (fator -> INT .)
    MAIOR           reduce using rule 7 (fator -> INT .)
    MENOR_IGUAL     reduce using rule 7 (fator -> INT .)
    MAIOR_IGUAL     reduce using rule 7 (fator -> INT .)
    $end            reduce using rule 7 (fator -> INT .)
    RPAREN          reduce using rule 7 (fator -> INT .)
    RCHAVE          reduce using rule 7 (fator -> INT .)


state 6

    (8) fator -> FLOAT .

    MULT            reduce using rule 8 (fator -> FLOAT .)
    DIV             reduce using rule 8 (fator -> FLOAT .)
    PLUS            reduce using rule 8 (fator -> FLOAT .)
    MINUS           reduce using rule 8 (fator -> FLOAT .)
    AND             reduce using rule 8 (fator -> FLOAT .)
    OR              reduce using rule 8 (fator -> FLOAT .)
    IGUAL           reduce using rule 8 (fator -> FLOAT .)
    DIFERENTE       reduce using rule 8 (fator -> FLOAT .)
    MENOR           reduce using rule 8 (fator -> FLOAT .)
    MAIOR           reduce using rule 8 (fator -> FLOAT .)
    MENOR_IGUAL     reduce using rule 8 (fator -> FLOAT .)
    MAIOR_IGUAL     reduce using rule 8 (fator -> FLOAT .)
    $end            reduce using rule 8 (fator -> FLOAT .)
    RPAREN          reduce using rule 8 (fator -> FLOAT .)
    RCHAVE          reduce using rule 8 (fator -> FLOAT .)


state 7

    (9) fator -> STRING .

    MULT            reduce using rule 9 (fator -> STRING .)
    DIV             reduce using rule 9 (fator -> STRING .)
    PLUS            reduce using rule 9 (fator -> STRING .)
    MINUS           reduce using rule 9 (fator -> STRING .)
    AND             reduce using rule 9 (fator -> STRING .)
    OR              reduce using rule 9 (fator -> STRING .)
    IGUAL           reduce using rule 9 (fator -> STRING .)
    DIFERENTE       reduce using rule 9 (fator -> STRING .)
    MENOR           reduce using rule 9 (fator -> STRING .)
    MAIOR           reduce using rule 9 (fator -> STRING .)
    MENOR_IGUAL     reduce using rule 9 (fator -> STRING .)
    MAIOR_IGUAL     reduce using rule 9 (fator -> STRING .)
    $end            reduce using rule 9 (fator -> STRING .)
    RPAREN          reduce using rule 9 (fator -> STRING .)
    RCHAVE          reduce using rule 9 (fator -> STRING .)


state 8

    (10) fator -> BOOL .

    MULT            reduce using rule 10 (fator -> BOOL .)
    DIV             reduce using rule 10 (fator -> BOOL .)
    PLUS            reduce using rule 10 (fator -> BOOL .)
    MINUS           reduce using rule 10 (fator -> BOOL .)
    AND             reduce using rule 10 (fator -> BOOL .)
    OR              reduce using rule 10 (fator -> BOOL .)
    IGUAL           reduce using rule 10 (fator -> BOOL .)
    DIFERENTE       reduce using rule 10 (fator -> BOOL .)
    MENOR           reduce using rule 10 (fator -> BOOL .)
    MAIOR           reduce using rule 10 (fator -> BOOL .)
    MENOR_IGUAL     reduce using rule 10 (fator -> BOOL .)
    MAIOR_IGUAL     reduce using rule 10 (fator -> BOOL .)
    $end            reduce using rule 10 (fator -> BOOL .)
    RPAREN          reduce using rule 10 (fator -> BOOL .)
    RCHAVE          reduce using rule 10 (fator -> BOOL .)


state 9

    (11) fator -> CHAR .

    MULT            reduce using rule 11 (fator -> CHAR .)
    DIV             reduce using rule 11 (fator -> CHAR .)
    PLUS            reduce using rule 11 (fator -> CHAR .)
    MINUS           reduce using rule 11 (fator -> CHAR .)
    AND             reduce using rule 11 (fator -> CHAR .)
    OR              reduce using rule 11 (fator -> CHAR .)
    IGUAL           reduce using rule 11 (fator -> CHAR .)
    DIFERENTE       reduce using rule 11 (fator -> CHAR .)
    MENOR           reduce using rule 11 (fator -> CHAR .)
    MAIOR           reduce using rule 11 (fator -> CHAR .)
    MENOR_IGUAL     reduce using rule 11 (fator -> CHAR .)
    MAIOR_IGUAL     reduce using rule 11 (fator -> CHAR .)
    $end            reduce using rule 11 (fator -> CHAR .)
    RPAREN          reduce using rule 11 (fator -> CHAR .)
    RCHAVE          reduce using rule 11 (fator -> CHAR .)


state 10

    (12) fator -> LPAREN . expressao RPAREN
    (1) expressao -> . expressao PLUS termo
    (2) expressao -> . expressao MINUS termo
    (3) expressao -> . termo
    (14) expressao -> . expressao AND termo
    (15) expressao -> . expressao OR termo
    (17) expressao -> . expressao IGUAL termo
    (18) expressao -> . expressao DIFERENTE termo
    (19) expressao -> . expressao MENOR termo
    (20) expressao -> . expressao MAIOR termo
    (21) expressao -> . expressao MENOR_IGUAL termo
    (22) expressao -> . expressao MAIOR_IGUAL termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    expressao                      shift and go to state 25
    termo                          shift and go to state 2
    fator                          shift and go to state 3

state 11

    (13) fator -> LCHAVE . expressao RCHAVE
    (1) expressao -> . expressao PLUS termo
    (2) expressao -> . expressao MINUS termo
    (3) expressao -> . termo
    (14) expressao -> . expressao AND termo
    (15) expressao -> . expressao OR termo
    (17) expressao -> . expressao IGUAL termo
    (18) expressao -> . expressao DIFERENTE termo
    (19) expressao -> . expressao MENOR termo
    (20) expressao -> . expressao MAIOR termo
    (21) expressao -> . expressao MENOR_IGUAL termo
    (22) expressao -> . expressao MAIOR_IGUAL termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    expressao                      shift and go to state 26
    termo                          shift and go to state 2
    fator                          shift and go to state 3

state 12

    (1) expressao -> expressao PLUS . termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    termo                          shift and go to state 27
    fator                          shift and go to state 3

state 13

    (2) expressao -> expressao MINUS . termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    termo                          shift and go to state 28
    fator                          shift and go to state 3

state 14

    (14) expressao -> expressao AND . termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    termo                          shift and go to state 29
    fator                          shift and go to state 3

state 15

    (15) expressao -> expressao OR . termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    termo                          shift and go to state 30
    fator                          shift and go to state 3

state 16

    (17) expressao -> expressao IGUAL . termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    termo                          shift and go to state 31
    fator                          shift and go to state 3

state 17

    (18) expressao -> expressao DIFERENTE . termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    termo                          shift and go to state 32
    fator                          shift and go to state 3

state 18

    (19) expressao -> expressao MENOR . termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    termo                          shift and go to state 33
    fator                          shift and go to state 3

state 19

    (20) expressao -> expressao MAIOR . termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    termo                          shift and go to state 34
    fator                          shift and go to state 3

state 20

    (21) expressao -> expressao MENOR_IGUAL . termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    termo                          shift and go to state 35
    fator                          shift and go to state 3

state 21

    (22) expressao -> expressao MAIOR_IGUAL . termo
    (4) termo -> . termo MULT fator
    (5) termo -> . termo DIV fator
    (6) termo -> . fator
    (16) termo -> . NOT fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    NOT             shift and go to state 4
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    termo                          shift and go to state 36
    fator                          shift and go to state 3

state 22

    (4) termo -> termo MULT . fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    fator                          shift and go to state 37

state 23

    (5) termo -> termo DIV . fator
    (7) fator -> . INT
    (8) fator -> . FLOAT
    (9) fator -> . STRING
    (10) fator -> . BOOL
    (11) fator -> . CHAR
    (12) fator -> . LPAREN expressao RPAREN
    (13) fator -> . LCHAVE expressao RCHAVE

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    LPAREN          shift and go to state 10
    LCHAVE          shift and go to state 11

    fator                          shift and go to state 38

state 24

    (16) termo -> NOT fator .

    MULT            reduce using rule 16 (termo -> NOT fator .)
    DIV             reduce using rule 16 (termo -> NOT fator .)
    PLUS            reduce using rule 16 (termo -> NOT fator .)
    MINUS           reduce using rule 16 (termo -> NOT fator .)
    AND             reduce using rule 16 (termo -> NOT fator .)
    OR              reduce using rule 16 (termo -> NOT fator .)
    IGUAL           reduce using rule 16 (termo -> NOT fator .)
    DIFERENTE       reduce using rule 16 (termo -> NOT fator .)
    MENOR           reduce using rule 16 (termo -> NOT fator .)
    MAIOR           reduce using rule 16 (termo -> NOT fator .)
    MENOR_IGUAL     reduce using rule 16 (termo -> NOT fator .)
    MAIOR_IGUAL     reduce using rule 16 (termo -> NOT fator .)
    $end            reduce using rule 16 (termo -> NOT fator .)
    RPAREN          reduce using rule 16 (termo -> NOT fator .)
    RCHAVE          reduce using rule 16 (termo -> NOT fator .)


state 25

    (12) fator -> LPAREN expressao . RPAREN
    (1) expressao -> expressao . PLUS termo
    (2) expressao -> expressao . MINUS termo
    (14) expressao -> expressao . AND termo
    (15) expressao -> expressao . OR termo
    (17) expressao -> expressao . IGUAL termo
    (18) expressao -> expressao . DIFERENTE termo
    (19) expressao -> expressao . MENOR termo
    (20) expressao -> expressao . MAIOR termo
    (21) expressao -> expressao . MENOR_IGUAL termo
    (22) expressao -> expressao . MAIOR_IGUAL termo

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13
    AND             shift and go to state 14
    OR              shift and go to state 15
    IGUAL           shift and go to state 16
    DIFERENTE       shift and go to state 17
    MENOR           shift and go to state 18
    MAIOR           shift and go to state 19
    MENOR_IGUAL     shift and go to state 20
    MAIOR_IGUAL     shift and go to state 21


state 26

    (13) fator -> LCHAVE expressao . RCHAVE
    (1) expressao -> expressao . PLUS termo
    (2) expressao -> expressao . MINUS termo
    (14) expressao -> expressao . AND termo
    (15) expressao -> expressao . OR termo
    (17) expressao -> expressao . IGUAL termo
    (18) expressao -> expressao . DIFERENTE termo
    (19) expressao -> expressao . MENOR termo
    (20) expressao -> expressao . MAIOR termo
    (21) expressao -> expressao . MENOR_IGUAL termo
    (22) expressao -> expressao . MAIOR_IGUAL termo

    RCHAVE          shift and go to state 40
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13
    AND             shift and go to state 14
    OR              shift and go to state 15
    IGUAL           shift and go to state 16
    DIFERENTE       shift and go to state 17
    MENOR           shift and go to state 18
    MAIOR           shift and go to state 19
    MENOR_IGUAL     shift and go to state 20
    MAIOR_IGUAL     shift and go to state 21


state 27

    (1) expressao -> expressao PLUS termo .
    (4) termo -> termo . MULT fator
    (5) termo -> termo . DIV fator

    PLUS            reduce using rule 1 (expressao -> expressao PLUS termo .)
    MINUS           reduce using rule 1 (expressao -> expressao PLUS termo .)
    AND             reduce using rule 1 (expressao -> expressao PLUS termo .)
    OR              reduce using rule 1 (expressao -> expressao PLUS termo .)
    IGUAL           reduce using rule 1 (expressao -> expressao PLUS termo .)
    DIFERENTE       reduce using rule 1 (expressao -> expressao PLUS termo .)
    MENOR           reduce using rule 1 (expressao -> expressao PLUS termo .)
